--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -39,6 +39,32 @@
             </ul>
         </div>
     </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-9 col-md-9 col-sm-10 col-xs-10">
+                <form>
+                    <h1>发布</h1>
+                    <div class="form-group">
+                        <label for="title">标题</label>
+                        <input type="email" class="form-control" id="title" name="title" placeholder="请输入标题">
+                    </div>
+                    <div class="form-group">
+                        <label for="question">问题补充</label>
+                        <textarea class="form-control" rows="5" id="question" name="question"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="tag">标签</label>
+                        <input class="form-control" id="tag" name="tag" placeholder="请输入标签"></input>
+                    </div>
+                    <div class="form-group">
+                        <button type="button" class="btn btn-info pull-right">发布</button>
+                    </div>
+                </form>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-2 col-xs-2">3</div>
+        </div>
+    </div>
 </nav>
 </body>
 </html>
